# iris

./: .gitignore
iris-client/: Cargo.toml  net.py  run_net.py  run_test.py  server.py  setup.py  test.py  test2.py  test2_de.py  test2_local.py  test_local.py
iris-client/client/: Cargo.toml
iris-client/client/client/: __init__.py  ext.py
iris-client/client/src/: context.rs  lib.rs
iris-client/common/: Cargo.toml
iris-client/common/proto/helloworld/: helloworld.proto
iris-client/common/src/: lib.rs
iris-client/proto/: Cargo.toml  build.rs
iris-client/proto/helloworld/: helloworld.proto
iris-client/proto/proto/helloworld/: helloworld.proto
iris-client/proto/proto/n2n/: n2n.proto
iris-client/proto/src/: lib.rs
iris-client/server/: Cargo.toml
iris-client/server/src/: command.rs  command_server.rs  distributed.rs  error.rs  main.rs  mem.rs  metrics.rs  utils.rs
iris-client/server/src/command/: after.rs  apply.rs  args.rs  call.rs  create_object.rs  get_attr.rs  get_remote_object.rs  send.rs
iris-client/src/: context.rs  lib.rs
iris-client/word_count/: __init__.py  client.py
iris-server/: client.py  common.py  server.py
iris-server/proto/helloworld/: helloworld.proto
waitmap/: Cargo.toml
waitmap/src/: lib.rs
