[package]
name = "client"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.0.2"
bytes = "1.0"
pyo3 = { version="0.13.2", features = ["extension-module"] }
tokio = { version="1.0", features = ["full"] }
tonic = "0.4"
futures = "0.3"
prost = "0.7"
tower = { version="0.4.3", features=["util"] }
uuid = { version="0.8", features = ["v4"] }
common = { path="../common" }
proto = { path="../proto" }
tracing = "0.1"
tracing-subscriber = "0.2.15"

[build-dependencies]
tonic-build = "0.4"

[lib]
name = "client"
crate-type = ["cdylib"]