[package]
name = "proto"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rayon = "1.0.2"
tokio = { version="0.2", features = ["full"] }
tonic = "0.2"
futures = "0.3"
prost = "0.6"
tower = "*"

[build-dependencies]
tonic-build = "0.2"