[package]
name = "server"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
proto = { path="../proto" }
pyo3 = "0.10.1"
tokio = { version="0.2", features = ["full"] }
tonic = "0.2"
futures = "0.3"
prost = "0.6"
tower = "*"
uuid = { version="0.8", features = ["v4"] } 
ctrlc = { version = "3.0", features = ["termination"] }
dict_derive = "0.2.0"
structopt = "*"
dashmap = { version="4.0.0-rc5" }