[package]
name = "server"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
proto = { path="../proto" }
pyo3 = "0.13"
tokio = { version="0.2", features = ["full"] }
tonic = "0.2"
futures = "0.3"
prost = "0.6"
tower = "*"
uuid = { version="0.8", features = ["v4"] } 
ctrlc = { version = "3.1.4", features = ["termination"] }
dict_derive = "0.2.0"
structopt = "*"
dashmap = { version="4.0.0-rc5" }
tracing = "0.1"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"
tracing-timing = "*"
opentelemetry = "0.6"
tracing-opentelemetry = "0.5"
opentelemetry-jaeger = "0.5"
quanta = "0.5"
waitmap = { path="/home/skye/waitmap" }
async-recursion = "0.3"
dhat = "0.2.1"